  * For details on using non-SQLite databases, see the [README][readme-db] or
    [installation instructions][install-guide-db]
  * You will probably need to install additional dependencies if you wish to
    use something other than SQLite
  * Migrating an existing database from SQLite to your chosen option is
    probably easy, but we do not offer instructions for doing so
* The `db_filename` config setting (for SQLite) is now interpreted as relative
  to the config's `homedir` setting [[#1574][]]
  * `homedir` itself has a default value that will be used if not set
* Added separate server & nickname authentication options [[#1513][]]
  * See [authentication configuration docs][auth-config-docs]
* Added `commands_on_connect` setting to send a list of commands automatically
  when Sopel's IRC connection is successfully established [[#1528][]]
* Log files have become *much* more configurable [[#1678][], [[#1714][]]]
  * Logs are named based on the config name
  * Many, many new settings added to customize logging
  * The default log format includes timestamp, source package, & level (which
    will make logs *much* more useful when reporting bugs)
* Logs now have information about which plugin file was reloaded [[#1762][]]
  * This is helpful for owners of Sopel instances with multiple versions of a
    plugin available for testing or development purposes
* Sopel's own rate-limiting & flood protection parameters are now configurable,
  and can even be turned off entirely if Sopel is behind a bouncer or other IRC
  proxy that handles flood protection itself [[#1518][], [#1638][]]
* Added more control over JOIN throttling [[#1751][]]
  * Includes a new `throttle_wait` setting instead of a hard-coded time value
* Log timestamp and log line formats are now configurable [[#1512][]]
  * See details in [the logging configuration docs][logging-config-docs]
* Log filenames now include the config name, to help keep track of logs from
  multiple Sopel instances [[#1547][]]